--- a/BlinkStickBusylightClient/App.xaml
+++ b/BlinkStickBusylightClient/App.xaml
@@ -4,7 +4,8 @@
              xmlns:local="clr-namespace:BlinkStickBusylightClient"
              StartupUri="MainWindow.xaml"
              Startup="Application_Startup"
-             Exit="Application_Exit">
+             Exit="Application_Exit"
+             SessionEnding="Application_SessionEnding">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
