--- a/BlinkStickBusylightClient/AboutWindow.xaml
+++ b/BlinkStickBusylightClient/AboutWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="BlinkStickBusylightClient.AboutWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="About BlinkStick Busylight Client" Width="420" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"
+        Title="About" Width="420" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"
         WindowStartupLocation="CenterScreen" SizeToContent="Height" Icon="Resources/favicon.ico" ResizeMode="NoResize"
         SnapsToDevicePixels="True">
     <Grid>
